NATTQA-ENV/force-app/main/default/objects/NAC_Customer_Type_Option__mdt/NAC_Customer_Type_Option__mdt.object-meta.xml
<CustomObject>
    <label>NAC Customer Type Option</label>
    <pluralLabel>NAC Customer Type Options</pluralLabel>
</CustomObject>