NATTQA-ENV/force-app/main/default/objects/NAC_Customer_Type_Option__mdt/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>C11</fullName>
                <default>true</default>
                <label>C11</label>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C5</fullName>
            </value>
            <value>
                <fullName>C7</fullName>
            </value>
            <value>
                <fullName>V1H</fullName>
            </value>
            <value>
                <fullName>V1K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>