NATTQA-ENV/force-app/main/default/objects/NAC_Customer_Type_Option__mdt/fields/Domestic__c.field-meta.xml
<CustomField>
    <fullName>Domestic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domestic</label>
    <type>Checkbox</type>
</CustomField>