NATTQA-ENV/force-app/main/default/objects/NAC_Customer_Type_Option__mdt/fields/International__c.field-meta.xml
<CustomField>
    <fullName>International__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International</label>
    <type>Checkbox</type>
</CustomField>