NATTQA-ENV/force-app/main/default/objects/NAC_Customer_Type_Option__mdt/fields/NAC_Billing_Delivery_Term__c.field-meta.xml
<CustomField>
    <fullName>NAC_Billing_Delivery_Term__c</fullName>
    <label>NAC Billing Delivery Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BIL</fullName>
                <label>BIL - Bill to Customer</label>
            </value>
            <value>
                <fullName>COL</fullName>
                <label>COL - Collect</label>
            </value>
            <value>
                <fullName>CPU</fullName>
                <label>CPU - Customer Pick Up</label>
            </value>
            <value>
                <fullName>DAP</fullName>
                <isActive>false</isActive>
                <label>DAP</label>
            </value>
            <value>
                <fullName>DDP</fullName>
                <isActive>false</isActive>
                <label>DDP</label>
            </value>
            <value>
                <fullName>EXW</fullName>
                <label>EXW - EX Works</label>
            </value>
            <value>
                <fullName>FOB</fullName>
                <isActive>false</isActive>
                <label>FOB</label>
            </value>
            <value>
                <fullName>PPD/FOB (free on board)</fullName>
            </value>
            <value>
                <fullName>PPD</fullName>
                <label>PPD - Prepaid Freight</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>