NATTQA-ENV/force-app/main/default/objects/NAC_Customer_Type_Option__mdt/fields/NAC_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>NAC_Order_Type__c</fullName>
    <label>NAC Order Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
                <isActive>false</isActive>
                <label>Emergency</label>
            </value>
            <value>
                <fullName>2D</fullName>
                <label>Emergency - 2D</label>
            </value>
            <value>
                <fullName>2G</fullName>
                <label>Emergency - 2G</label>
            </value>
            <value>
                <fullName>2P</fullName>
                <label>Emergency - 2P</label>
            </value>
            <value>
                <fullName>Stock Order</fullName>
                <isActive>false</isActive>
                <label>Stock Order</label>
            </value>
            <value>
                <fullName>4D</fullName>
                <label>Stock order - 4D</label>
            </value>
            <value>
                <fullName>4G</fullName>
                <default>true</default>
                <label>Stock order - 4G</label>
            </value>
            <value>
                <fullName>4P</fullName>
                <label>Stock order - 4P</label>
            </value>
            <value>
                <fullName>Unit Down</fullName>
                <isActive>false</isActive>
                <label>Unit Down</label>
            </value>
            <value>
                <fullName>1D</fullName>
                <label>Unit Down - 1D</label>
            </value>
            <value>
                <fullName>1G</fullName>
                <label>Unit Down - 1G</label>
            </value>
            <value>
                <fullName>1P</fullName>
                <label>Unit Down - 1P</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>