NATTQA-ENV/force-app/main/default/objects/NAC_Customer_Type_Option__mdt/fields/NAC_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>NAC_Shipping_Method__c</fullName>
    <label>NAC Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BW1</fullName>
                <label>BW1 - BESTWAY</label>
            </value>
            <value>
                <fullName>CPU</fullName>
                <label>CPU - Customer Pick Up</label>
            </value>
            <value>
                <fullName>CR1</fullName>
                <label>CR1 - CUSTOMER ROUTING</label>
            </value>
            <value>
                <fullName>FX1</fullName>
                <label>FX1 - FEDEX - NEXT DAY AIR</label>
            </value>
            <value>
                <fullName>FX2</fullName>
                <label>FX2 - FEDEX - SECOND DAY AIR</label>
            </value>
            <value>
                <fullName>FX3</fullName>
                <label>FX3 - FEDEX - THIRD DAY AIR</label>
            </value>
            <value>
                <fullName>FXG</fullName>
                <label>FXG - FEDEX - GROUND</label>
            </value>
            <value>
                <fullName>FXX</fullName>
                <label>FXX - FEDEX - SATURDAY DELIVERY</label>
            </value>
            <value>
                <fullName>OF1</fullName>
                <label>OF1 - OCEAN FREIGHT</label>
            </value>
            <value>
                <fullName>AF1</fullName>
                <label>AF1 - AIR FREIGHT</label>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>2D</fullName>
                <isActive>false</isActive>
                <label>2D</label>
            </value>
            <value>
                <fullName>2G</fullName>
                <isActive>false</isActive>
                <label>2G</label>
            </value>
            <value>
                <fullName>4D</fullName>
                <isActive>false</isActive>
                <label>4D</label>
            </value>
            <value>
                <fullName>4G</fullName>
                <isActive>false</isActive>
                <label>4G</label>
            </value>
            <value>
                <fullName>AF</fullName>
                <isActive>false</isActive>
                <label>AF</label>
            </value>
            <value>
                <fullName>EXW</fullName>
                <isActive>false</isActive>
                <label>EXW</label>
            </value>
            <value>
                <fullName>OF</fullName>
                <isActive>false</isActive>
                <label>OF</label>
            </value>
            <value>
                <fullName>PPD/FOB (free on board)</fullName>
                <isActive>false</isActive>
                <label>PPD/FOB (free on board)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>