NATTQA-ENV/force-app/main/default/objects/NAC_Customer_Type_Option__mdt/fields/Order_Type_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Order_Type_Sort_Order__c</fullName>
    <label>Order Type Sort Order</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>