NATTQA-ENV/force-app/main/default/objects/NAC_Customer_Type_Option__mdt/fields/Shipping_Method_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method_Sort_Order__c</fullName>
    <label>Shipping Method Sort Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>