NATTQA-ENV/force-app/main/default/objects/NAC_Customer_Type_Option__mdt/fields/Warehouse_Panama__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Panama__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warehouse Panama</label>
    <type>Checkbox</type>
</CustomField>